pipewire config, updated themes, updated dwm config

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,4 +1,21 @@
 #################################
+#             Animations        #
+#################################
+
+# Animations (requires pijulius)
+animations = true;
+animation-clamping = true;
+animation-delta = 14;
+animation-dampening = 25.0;
+animation-stiffness = 400.0;
+animation-window-mass = 1;
+animation-for-open-window = "zoom";
+animation-for-unmap-window = "zoom"
+animation-for-transient-window = "none";
+animation-for-workspace-switch-in = "slide-up";
+animation-for-workspace-switch-out = "slide-down";
+
+#################################
 #             Shadows           #
 #################################
 
@@ -70,7 +87,7 @@ rounded-corners-exclude = [
 #################################
 
 blur-method = "dual_kawase"
-blur-strength = 3
+blur-strength = 4
 blur-background = true
 blur-kern = "3x3box";
 
