autoinstall prototype - missing packages

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -2,12 +2,12 @@
 #             Animations        #
 #################################
 
-# Animations (requires pijulius)
+# Animations (AUR: picom-animations-git)
 animations = true;
 animation-clamping = true;
-animation-delta = 14;
-animation-dampening = 25.0;
-animation-stiffness = 400.0;
+#animation-delta = 100;
+animation-dampening = 18.0;
+animation-stiffness = 200.0;
 animation-window-mass = 1;
 animation-for-open-window = "zoom";
 animation-for-unmap-window = "zoom"
