config updates, script to autoconnect denoise filter to virtualmic

--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -28,7 +28,7 @@ bindl =, XF86MonBrightnessUp,   exec, brightnessctl s +10%
 bindl =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 bindl =, XF86RFKill,    exec, rfkill toggle bluetooth && rfkill toggle wlan
-bindl =, XF86Favorites, exec, rfkill toggle bluetooths
+bindl =, XF86Favorites, exec, rfkill toggle bluetooth
 
 bind  = SUPER, mouse:274, togglefloating
 bindm = SUPER, mouse:272, movewindow
