--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -13,3 +13,5 @@ exec-once = dunst
 exec-once = ~/.config/hypr/scripts/hyprlandStart
 
 # exec-once = ~/Scripts/connectRpiTunnel.sh
+
+exec-once = ~/Scripts/connectDenoisedFilter
