--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -169,6 +169,8 @@ opacity-rule = [
   "80:class_g = 'st-256color' && !focused",
   "80:class_g = 'Alacritty' && focused",
   "70:class_g = 'Alacritty' && !focused",
+  "80:class_g = 'kitty' && focused",
+  "70:class_g = 'kitty' && !focused",
   "80:class_g = 'Subl' && focused",
   "70:class_g = 'Subl' && !focused",
   "70:class_g = 'Rofi'"
