--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,13 +1,16 @@
+source = ~/.config/hypr/variables.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/autostart.conf
 
 
 input {
-    kb_layout  = cz,us
-    kb_options = grp:shifts_toggle
+    # kb_layout = us 
+    # kb_options = grp:shifts_toggle
 
-    follow_mouse   = 1
+    kb_file = $home/.config/hypr/keyboard/main.xkb 
+
+    follow_mouse   = 1 
     natural_scroll = 1
 
 	# [ -1.0 - 1.0 ]
@@ -32,8 +35,8 @@ gestures {
 
 
 general {
-    gaps_in  = 5
-    gaps_out = 10
+    gaps_in  = 3
+    gaps_out = 5
     
     border_size = 3
     
@@ -43,7 +46,7 @@ general {
     layout = dwindle
 
 	# whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
-    apply_sens_to_raw = 0 
+    apply_sens_to_raw = 1
 }
 
 
@@ -53,6 +56,7 @@ decoration {
     blur = 1
     blur_size   = 6  # minimum 1
     blur_passes = 1  # minimum 1
+    blurls=waybar
         
     drop_shadow  = 1
     shadow_range = 15
@@ -96,5 +100,8 @@ windowrule = float, ^(mediainfo-gui)$
 windowrule = monitor 1, ^(WebCord)$
 
 windowrulev2 = float, class:^(WebCord)$, title:^(WebCord – Settings)$
+windowrulev2 = float, class:^(thunar)$, title:^(File Operation Progress)$
+windowrulev2 = float, class:^(Steam)$, title:^(Friends List)$
+windowrulev2 = float, class:^(Steam)$, title:^(Steam - News)$
 
-# windowrulev2 = animation slide, class:^(Dunst)$
+# windowrulev2 = opacity 0.8 0.8, class:^(Dunst)$
