--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -1,9 +1,3 @@
-# -- VARS -- 
-$browser     = firefox
-$filemanager = thunar
-$terminal    = kitty
-
-
 # -- System Binds --
 bind = SUPERSHIFT, Q,      exit
 bind = SUPER,      Q,      killactive
@@ -36,11 +30,12 @@ bindm = SUPER, mouse:273, resizewindow
 
 bind = SUPERSHIFT, C, exec, hyprpicker -a
 bind = SUPERSHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
+# bind = SUPERSHIFT, S, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
 
 
 # -- App Binds --
-bind = SUPER,      R,      exec, $HOME/.config/rofi/launcher.sh
-bind = SUPER,      ESCAPE, exec, $HOME/.config/rofi/powermenu.sh
+bind = SUPER,      R,      exec, $home/.config/rofi/launcher.sh
+bind = SUPER,      ESCAPE, exec, $home/.config/rofi/powermenu.sh
 bind = SUPER,      RETURN, exec, $terminal
 bind = SUPER,      E,      exec, $filemanager
 bind = SUPER,      11,     exec, $browser 
@@ -54,6 +49,11 @@ bind = SUPERSHIFT, down,  movewindow, d
 bind = SUPERSHIFT, left,  movewindow, l
 bind = SUPERSHIFT, right, movewindow, r
 
+# - VIM -
+bind = SUPERSHIFT, k, movewindow, u
+bind = SUPERSHIFT, j, movewindow, d
+bind = SUPERSHIFT, h, movewindow, l
+bind = SUPERSHIFT, l, movewindow, r
 
 # -- Resize Windows --
 binde = SUPERCONTROL, down,  resizeactive,   0  10
@@ -61,6 +61,11 @@ binde = SUPERCONTROL, up,    resizeactive,   0 -10
 binde = SUPERCONTROL, left,  resizeactive, -10   0
 binde = SUPERCONTROL, right, resizeactive,  10   0
 
+# - VIM -
+binde = SUPERCONTROL, j, resizeactive,   0  10
+binde = SUPERCONTROL, k, resizeactive,   0 -10
+binde = SUPERCONTROL, h, resizeactive, -10   0
+binde = SUPERCONTROL, l, resizeactive,  10   0
 
 # -- Workspace Binds --
 bind = SUPER, F1, exec, ~/.config/hypr/scripts/hyprdwm workspace 1
@@ -86,9 +91,22 @@ bind = SUPERSHIFT, F9, exec, ~/.config/hypr/scripts/hyprdwm movesilent 9
 bind = SUPER, right, exec, ~/.config/hypr/scripts/hyprdwm right
 bind = SUPER, left,  exec, ~/.config/hypr/scripts/hyprdwm left
 
+# Vim
+bind = SUPER, l, exec, ~/.config/hypr/scripts/hyprdwm right
+bind = SUPER, h,  exec, ~/.config/hypr/scripts/hyprdwm left
+
 
 # -- Passthrough keybinds (VM, etc) --
 bind   = SUPERCONTROL, F1,     submap, clean
 submap = clean
 bind   = SUPERCONTROL, ESCAPE, submap, reset
 submap = reset
+
+
+# -- Global keybinds --
+bind = ALT,F10,pass,^(com\.obsproject\.Studio)$
+bind = ALT,F9,pass,^(com\.obsproject\.Studio)$
+
+# no workey
+bind = CONTROLSHIFT,M,pass,^(WebCord)$
+
