--- a/config/waybar/config
+++ b/config/waybar/config
@@ -4,19 +4,23 @@
 
     "layer": "top",
     "position": "top",
-	"height": 42,
+	"height": 37,
 
     // Choose the order of the modules
+    // Regular
     "modules-left": ["custom/media", "hyprland/window", "custom/sepRight"],
+    // Powersave
+    // "modules-left": ["hyprland/window", "custom/sepRight"],
+
     "modules-center": ["custom/sepLeft", "wlr/workspaces", "custom/sepRight"],
 
 	// Desktop
-   	// "modules-right": ["custom/sepLeft", "pulseaudio", "memory", "cpu", "hyprland/language", "custom/notifications", "clock", "tray"],
+  "modules-right": ["custom/sepLeft", "pulseaudio", "memory", "cpu", "hyprland/language", "custom/notifications", "clock", "tray"],
 
 	// Laptop 
 	// Edit battery in battery and baterry#power modules (ls /sys/class/power_supply)
 	// Edit interface in network module (ip addr)
-    "modules-right": ["custom/sepLeft", "pulseaudio", "network", "battery#power", "battery", "hyprland/language", "custom/notifications", "clock", "tray"],
+  // "modules-right": ["custom/sepLeft", "pulseaudio", "network", "battery#power", "battery", "hyprland/language", "custom/notifications", "clock", "tray"],
 
     // Modules configuration
     "wlr/workspaces": {
@@ -34,8 +38,8 @@
     "network": {
         "interface": "wlp0s20f3",
         "format": "{ifname}",
-        "format-wifi": "{essid} ",
-        "format-ethernet": "",
+        "format-wifi": "{essid} <span font='25px' rise='-4000'></span>",
+        "format-ethernet": "<span font='25px' rise='-4000'></span>",
         "format-disconnected": "", //An empty format will hide the module.
         "tooltip-format": "{ifname} via {gwaddr} ",
         "tooltip-format-wifi": "{ipaddr} ({signalStrength}%)",
@@ -57,6 +61,7 @@
     		"default": ["", "", "", "", "", "", "", "", "", "", ""],
     		"critical": [""],
     	},
+        "on-click-middle": "exec ~/Scripts/togglePowersave",
     	"max-length": 25,
     },
     "battery#power": {
@@ -64,6 +69,7 @@
     	"interval": 10,
     	"format-charging": "+{power}W ",
     	"format": "-{power}W ",
+        "on-click-middle": "exec ~/Scripts/togglePowersave",
     	"max-length": 25,
     },
     "tray": {
