hyprland.conf: disabled bluetooth headphones play/pause as kayboard input

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -26,6 +26,11 @@ input {
  #     sensitivity = 0.1
  # }
 
+# Disables play/pause characters as keyboard inputs
+# (the sequence '428u' would be a bit unfortunate in vim xd)
+device:momentum-4-(avrcp) {
+    enabled = 0    
+}
 
 gestures {
 	workspace_swipe 				   = 1
