powerSave script, lightdm keyboard changed to us by default, hyprland config generalization

--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -39,8 +39,8 @@ bind = SUPER,      ESCAPE, exec, $home/.config/rofi/powermenu.sh
 bind = SUPER,      RETURN, exec, $terminal
 bind = SUPER,      E,      exec, $filemanager
 bind = SUPER,      11,     exec, $browser 
-bind = SUPER,      13,     exec, webcord --enable-features=UseOzonePlatform --ozone-platform=wayland 
-bind = SUPERSHIFT, period, exec, smile 
+bind = SUPER,      13,     exec, $chat
+bind = SUPERSHIFT, period, exec, $emojipicker 
 
 
 # -- Swap Windows --
