--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -1,13 +1,13 @@
 # -- MONITORS --
 
-$MAIN   = DP-2
-monitor = $MAIN,   2560x1440@165, auto, 1
+# $MAIN   = DP-2
+# monitor = $MAIN,   2560x1440@165, auto, 1
 
-$SECOND = DP-3
-monitor = $SECOND, 2560x1080@60,  auto, 1
+# $SECOND = DP-3
+# monitor = $SECOND, 2560x1080@60,  auto, 1
 
-$THIRD  = HDMI-A-1
-monitor = $THIRD,  1920x1080@60,  0x0,  1
+# $THIRD  = HDMI-A-1
+# monitor = $THIRD,  1920x1080@60,  0x0,  1
 
 
 # - Other -
@@ -15,39 +15,39 @@ monitor =, preferred, auto, 1
 
 
 # - Main monitor -
-wsbind = 1, $MAIN
-wsbind = 2, $MAIN
-wsbind = 3, $MAIN
-wsbind = 4, $MAIN
-wsbind = 5, $MAIN
-wsbind = 6, $MAIN
-wsbind = 7, $MAIN
-wsbind = 8, $MAIN
-wsbind = 9, $MAIN
-workspace = $MAIN, 1
+# wsbind = 1, $MAIN
+# wsbind = 2, $MAIN
+# wsbind = 3, $MAIN
+# wsbind = 4, $MAIN
+# wsbind = 5, $MAIN
+# wsbind = 6, $MAIN
+# wsbind = 7, $MAIN
+# wsbind = 8, $MAIN
+# wsbind = 9, $MAIN
+# workspace = $MAIN, 1
 
 # - Second monitor - 
-wsbind = 10, $SECOND
-wsbind = 11, $SECOND
-wsbind = 12, $SECOND
-wsbind = 13, $SECOND
-wsbind = 14, $SECOND
-wsbind = 15, $SECOND
-wsbind = 16, $SECOND
-wsbind = 17, $SECOND
-wsbind = 18, $SECOND
-wsbind = 19, $SECOND
-workspace = $SECOND, 11
+# wsbind = 10, $SECOND
+# wsbind = 11, $SECOND
+# wsbind = 12, $SECOND
+# wsbind = 13, $SECOND
+# wsbind = 14, $SECOND
+# wsbind = 15, $SECOND
+# wsbind = 16, $SECOND
+# wsbind = 17, $SECOND
+# wsbind = 18, $SECOND
+# wsbind = 19, $SECOND
+# workspace = $SECOND, 11
 
 # - TV -
-wsbind = 20, $THIRD
-wsbind = 21, $THIRD
-wsbind = 22, $THIRD
-wsbind = 23, $THIRD
-wsbind = 24, $THIRD
-wsbind = 25, $THIRD
-wsbind = 26, $THIRD
-wsbind = 27, $THIRD
-wsbind = 28, $THIRD
-wsbind = 29, $THIRD
-workspace = $THIRD, 21
+# wsbind = 20, $THIRD
+# wsbind = 21, $THIRD
+# wsbind = 22, $THIRD
+# wsbind = 23, $THIRD
+# wsbind = 24, $THIRD
+# wsbind = 25, $THIRD
+# wsbind = 26, $THIRD
+# wsbind = 27, $THIRD
+# wsbind = 28, $THIRD
+# wsbind = 29, $THIRD
+# workspace = $THIRD, 21
