--- a/config/hypr/variables.conf
+++ b/config/hypr/variables.conf
@@ -4,3 +4,5 @@ $home        = /home/desktop31
 $browser     = firefox
 $filemanager = thunar
 $terminal    = kitty -1
+$chat        = webcord --enable-features=UseOzonePlatform --ozone-platform=wayland
+$emojipicker = smile
