nvim: remaps + markdown previewer; kitty: removed tab keybinds

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -16,8 +16,7 @@ modify_font cell_height 3px
 scrollback_lines 5000
 
 
-# -- AUDIO --
-enable_audio_bell no
+# -- AUDIO -- enable_audio_bell no
 
 
 # -- COLORS --
@@ -73,3 +72,8 @@ window_padding_width 4
 cursor_shape beam
 
 touch_scrool_multiplier 10.0
+
+
+# -- KEYS -- 
+map ctrl+tab no_op
+map ctrl+shift+tab no_op
