--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -14,12 +14,12 @@ bind = SUPER,      mouse:276, cyclenext
 # Add notebook lid switch name 
 # bindl =, switch:[switch name], exec, dm-tool lock
 
-bindl =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindl =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindle =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl =, XF86AudioMute,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
-bindl =, XF86MonBrightnessUp,   exec, brightnessctl s +10%
-bindl =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindle =, XF86MonBrightnessUp,   exec, brightnessctl s +10%
+bindle =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 bindl =, XF86RFKill,    exec, rfkill toggle bluetooth && rfkill toggle wlan
 bindl =, XF86Favorites, exec, rfkill toggle bluetooth
@@ -108,5 +108,5 @@ bind = ALT,F10,pass,^(com\.obsproject\.Studio)$
 bind = ALT,F9,pass,^(com\.obsproject\.Studio)$
 
 # no workey
-bind = CONTROLSHIFT,M,pass,^(WebCord)$
+bind = SHIFTCONTROL,M,pass,^(WebCord)$
 
