--- a/config/waybar/config
+++ b/config/waybar/config
@@ -109,7 +109,8 @@
           			  "<span font='25px' rise='-4000'></span>"]
         },
         "on-click": "pulseaudio-control togmute",
-        "on-click-right": "pkill pavucontrol || pavucontrol",
+        // "on-click-right": "pkill pavucontrol || pavucontrol",
+        "on-click-right": "bluetoothctl connect 80:C3:BA:1F:B0:4A",
         "on-click-middle": "pulseaudio-control --node-blacklist  'VirtualMic','VoiceChat_IN','Output_IN','control.endpoint.multimedia','control.endpoint.communication' next-node",
         "on-scroll-up": "pulseaudio-control --volume-max 100 down",
         "on-scroll-down": "pulseaudio-control --volume-max 100 up",
@@ -122,6 +123,8 @@
         "on-click": "playerctl play-pause -p spotify",
         "on-click-right": "playerctl next -p spotify",
         "on-click-middle": "playerctl previous -p spotify",
+        "on-scroll-up": "playerctl volume 0.1- -p spotify",
+        "on-scroll-down": "playerctl volume 0.1+ -p spotify",
         "return-type": "json",
         "escape": true,
         "tooltip": false
