--- a/config/waybar/config
+++ b/config/waybar/config
@@ -41,7 +41,7 @@
         "format-wifi": "{essid} <span font='25px' rise='-4000'></span>",
         "format-ethernet": "<span font='25px' rise='-4000'></span>",
         "format-disconnected": "", //An empty format will hide the module.
-        "tooltip-format": "{ifname} via {gwaddr} ",
+        "tooltip-format": "{ifname} via {gwaddr} 󰊗",
         "tooltip-format-wifi": "{ipaddr} ({signalStrength}%)",
         "tooltip-format-ethernet": "{ifname} {ipaddr} ",
         "tooltip-format-disconnected": "Disconnected",
@@ -57,9 +57,9 @@
     	},
     	"format": "{capacity}% {icon}",
     	"format-icons": {
-    		"charging": [""],
-    		"default": ["", "", "", "", "", "", "", "", "", "", ""],
-    		"critical": [""],
+    		"charging": ["󰂄"],
+    		"default": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+    		"critical": ["󰂃"],
     	},
         "on-click-middle": "exec ~/Scripts/togglePowersave",
     	"max-length": 25,
@@ -94,13 +94,13 @@
     },
     "pulseaudio": {
         "format": "{icon} {volume}% {desc}",
-        "format-bluetooth": "{icon}  <span font='25px' rise='-4000'></span> {volume}% {desc}",
+        "format-bluetooth": "{icon} <span font='25px' rise='-4000'></span> {volume}% {desc}",
         "format-bluetooth-muted": "<span font='25px' rise='-4000'> </span> {volume}% {desc}",
         "format-muted": "<span font='25px' rise='-4000'></span> {volume}% {desc}",
         "format-icons": {
-          "headphone": "<span font='25px' rise='-4000'></span>",
-          "hands-free": "<span font='25px' rise='-4000'></span>",
-          "headset": "<span font='25px' rise='-4000'></span>",
+          "headphone": "<span font='25px' rise='-4000'>󰋋 </span>",
+          "hands-free": "<span font='25px' rise='-4000'>󰋋</span>",
+          "headset": "<span font='25px' rise='-4000'>󰋎</span>",
           "phone": "<span font='25px' rise='-4000'></span>",
           "portable": "<span font='25px' rise='-4000'></span>",
           "car": "<span font='25px' rise='-4000'></span>",
@@ -145,7 +145,7 @@
     },
     "memory": {
         "interval": 30,
-        "format": "{used:0.1f}G/{total:0.1f}G <span font='25px' rise='-4000'></span>",
+        "format": "{used:0.1f}G/{total:0.1f}G <span font='25px' rise='-4000'></span>",
         "on-click": "killall gnome-system-monitor || gnome-system-monitor -r"
     },
     "custom/notifications": {
@@ -174,9 +174,9 @@
     	"tooltip": false
     }
 
-    //                              
-    //                  
+    //  󰋋 󰋎 󰋐      󰌌                       
+    //             󰇖  󰇥   
 	//                  
-	//                     
+	// 󰁹 󰂂 󰂁 󰂀 󰁿 󰁾 󰁽 󰁼 󰁻 󰁺 󰂎 󰂄 󰂃  󰂆 󰂇 󰂈 󰂉 󰂊 󰂋 󰂅
 
 }
