config: updated kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -16,8 +16,8 @@ modify_font cell_height 3px
 scrollback_lines 5000
 
 
-# -- AUDIO -- enable_audio_bell no
-
+# -- AUDIO -- 
+enable_audio_bell no
 
 # -- COLORS --
 foreground #d6d6d6
