config: updated hypr config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ general {
     border_size = 3
     
     col.active_border   = 0x66eed714
-    col.inactive_border = 0x66333333
+    col.inactive_border = 0x77333333
 
     layout = dwindle
 
@@ -69,6 +69,8 @@ decoration {
     
     col.shadow = 0xff000000
 }
+layerrule = ignorezero, waybar
+layerrule = blur, rofi
 
 
 animations {
@@ -108,5 +110,10 @@ windowrulev2 = float, class:^(WebCord)$, title:^(WebCord – Settings)$
 windowrulev2 = float, class:^(thunar)$, title:^(File Operation Progress)$
 windowrulev2 = float, class:^(Steam)$, title:^(Friends List)$
 windowrulev2 = float, class:^(Steam)$, title:^(Steam - News)$
+windowrulev2 = float, class:^(org\.keepassxc\.KeePassXC)$, title:^(KeePassXC - Browser Access Request)$
+
+windowrulev2 = float, class:^()$, title:^(Developer Tools - https://discord.com/).*$
+
+windowrule = float, ^(ratulator)$
 
 # windowrulev2 = opacity 0.8 0.8, class:^(Dunst)$
