--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -11,12 +11,24 @@ bind = SUPER,      B,      exec,       ~/.config/hypr/scripts/togglebar
 bind = SUPER,      mouse:275, cyclenext, prev  # buggy
 bind = SUPER,      mouse:276, cyclenext
 
+# HARDCODED, FIX THIS!!
+bind = SUPERSHIFT, comma, focusmonitor, DP-2
+bind = SUPERSHIFT, period, focusmonitor, DP-3
+bind = SUPERSHIFT, mouse:275, focusmonitor, DP-2
+bind = SUPERSHIFT, mouse:276, focusmonitor, DP-3
+
 # Add notebook lid switch name 
 # bindl =, switch:[switch name], exec, dm-tool lock
 
-bindle =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindle =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl =, XF86AudioMute,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindle =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindle =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%-
+bindl  =, XF86AudioMute,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+bindl  =, XF86AudioMicMute,     exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+bindl  =, XF86AudioPlay,        exec, playerctl play-pause
+bindl  =, XF86AudioPrev,        exec, playerctl previous
+bindl  =, XF86AudioNext,        exec, playerctl next
 
 bindle =, XF86MonBrightnessUp,   exec, brightnessctl s +10%
 bindle =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
@@ -24,12 +36,16 @@ bindle =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bindl =, XF86RFKill,    exec, rfkill toggle bluetooth && rfkill toggle wlan
 bindl =, XF86Favorites, exec, rfkill toggle bluetooth
 
+bindl =, XF86Calculator, exec, ratulator
+
 bind  = SUPER, mouse:274, togglefloating
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
 bind = SUPERSHIFT, C, exec, hyprpicker -a
-bind = SUPERSHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = SUPERSHIFT, S, exec, $HOME/.cargo/bin/watershot -c  # make screenshot
+bind = SUPERSHIFT, A, exec, wl-paste | swappy -f -  # annotate image in clipboard
+# bind = SUPERSHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
 # bind = SUPERSHIFT, S, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
 
 
@@ -104,9 +120,16 @@ submap = reset
 
 
 # -- Global keybinds --
-bind = ALT,F10,pass,^(com\.obsproject\.Studio)$
-bind = ALT,F9,pass,^(com\.obsproject\.Studio)$
+bind = ALT, F10, pass, ^(com\.obsproject\.Studio)$
+bind = ALT, F9,  pass, ^(com\.obsproject\.Studio)$
 
 # no workey
 bind = SHIFTCONTROL,M,pass,^(WebCord)$
+
+# -- Groups --
+bind = SUPERCONTROL, g, togglegroup
+bind = SUPERCONTROL, i, moveintogroup, r
+bind = SUPERCONTROL, o, moveoutofgroup
+bind = SUPERSHIFT, period, changegroupactive, f
+bind = SUPERSHIFT, comma, changegroupactive, b
 
