--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -4,10 +4,12 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 exec-once = wl-paste --watch cliphist store
 exec-once = mpris-proxy
+exec-once = playerctld daemon
 
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = dunst
+exec-once = keepassxc
 # exec-once = qpwgraph
 
 exec-once = ~/.config/hypr/scripts/hyprlandStart
