--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -7,7 +7,7 @@
 # monitor = $SECOND, 2560x1080@60,  auto, 1
 
 # $THIRD  = HDMI-A-1
-# monitor = $THIRD,  1920x1080@60,  0x0,  1
+# monitor = $THIRD,  1920x1080@60,  auto,  1
 
 
 # - Other -
@@ -15,39 +15,36 @@ monitor =, preferred, auto, 1
 
 
 # - Main monitor -
-# wsbind = 1, $MAIN
-# wsbind = 2, $MAIN
-# wsbind = 3, $MAIN
-# wsbind = 4, $MAIN
-# wsbind = 5, $MAIN
-# wsbind = 6, $MAIN
-# wsbind = 7, $MAIN
-# wsbind = 8, $MAIN
-# wsbind = 9, $MAIN
-# workspace = $MAIN, 1
+# workspace = 1, monitor:$MAIN, default:true
+# workspace = 2, monitor:$MAIN
+# workspace = 3, monitor:$MAIN
+# workspace = 4, monitor:$MAIN
+# workspace = 5, monitor:$MAIN
+# workspace = 6, monitor:$MAIN
+# workspace = 7, monitor:$MAIN
+# workspace = 8, monitor:$MAIN
+# workspace = 9, monitor:$MAIN
 
 # - Second monitor - 
-# wsbind = 10, $SECOND
-# wsbind = 11, $SECOND
-# wsbind = 12, $SECOND
-# wsbind = 13, $SECOND
-# wsbind = 14, $SECOND
-# wsbind = 15, $SECOND
-# wsbind = 16, $SECOND
-# wsbind = 17, $SECOND
-# wsbind = 18, $SECOND
-# wsbind = 19, $SECOND
-# workspace = $SECOND, 11
+# workspace = 10, monitor:$SECOND
+# workspace = 11, monitor:$SECOND, default:true
+# workspace = 12, monitor:$SECOND
+# workspace = 13, monitor:$SECOND
+# workspace = 14, monitor:$SECOND
+# workspace = 15, monitor:$SECOND
+# workspace = 16, monitor:$SECOND
+# workspace = 17, monitor:$SECOND
+# workspace = 18, monitor:$SECOND
+# workspace = 19, monitor:$SECOND
 
 # - TV -
-# wsbind = 20, $THIRD
-# wsbind = 21, $THIRD
-# wsbind = 22, $THIRD
-# wsbind = 23, $THIRD
-# wsbind = 24, $THIRD
-# wsbind = 25, $THIRD
-# wsbind = 26, $THIRD
-# wsbind = 27, $THIRD
-# wsbind = 28, $THIRD
-# wsbind = 29, $THIRD
-# workspace = $THIRD, 21
+# workspace = 20, monitor:$THIRD
+# workspace = 21, monitor:$THIRD, default:true
+# workspace = 22, monitor:$THIRD
+# workspace = 23, monitor:$THIRD
+# workspace = 24, monitor:$THIRD
+# workspace = 25, monitor:$THIRD
+# workspace = 26, monitor:$THIRD
+# workspace = 27, monitor:$THIRD
+# workspace = 28, monitor:$THIRD
+# workspace = 29, monitor:$THIRD
