--- a/X11/xorg.conf.d/20-keyboard.conf
+++ b/X11/xorg.conf.d/20-keyboard.conf
@@ -1,6 +1,6 @@
 Section "InputClass"
 	Identifier "keyboard"
 	MatchIsKeyboard "yes"
-	Option "XkbLayout" "cz,us"
+	Option "XkbLayout" "us,cz"
 	Option "XkbOptions" "grp:shifts_toggle"
 EndSection
