config: hypr - added personal laptop touchpad

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,9 +22,16 @@ input {
     }
 }
 
- # device:[touchpad name] {
- #     sensitivity = 0.1
- # }
+# device:[touchpad name] {
+#     sensitivity = 0.1
+# }
+
+# Personal laptop
+# device:msft0001:01-04f3:3138-touchpad {
+# 	sensitivity = 0.1
+#    	disable_while_typing = 0
+# }
+
 
 # Disables play/pause characters as keyboard inputs
 # (the sequence '428u' would be a bit unfortunate in vim xd)
