--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -5,6 +5,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
 exec-once = mpris-proxy
 exec-once = playerctld daemon
+# exec-once = iio-hyprland
 
 exec-once = hyprpaper
 exec-once = waybar
