scripts: added .sh to all scripts

--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -17,4 +17,4 @@ exec-once = ~/.config/hypr/scripts/hyprlandStart
 
 # exec-once = ~/Scripts/connectRpiTunnel.sh
 
-exec-once = ~/Scripts/connectDenoisedFilter
+exec-once = ~/Scripts/connectDenoisedFilter.sh
