hypr: added untracked local configuration

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -124,3 +124,6 @@ windowrulev2 = float, class:^()$, title:^(Developer Tools - https://discord.com/
 windowrule = float, ^(ratulator)$
 
 # windowrulev2 = opacity 0.8 0.8, class:^(Dunst)$
+
+# Local settings not tracked by git
+source = ~/.config/hypr/local.conf
