hypr: moved device specific settings out of git tracked files

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,8 +1,10 @@
 source = ~/.config/hypr/variables.conf
 source = ~/.config/hypr/keybinds.conf
-source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/autostart.conf
+# local config file sourced at the end of the file 
 
+# -- Default monitor config
+monitor =, preferred, auto, 1
 
 input {
     # kb_layout = us 
@@ -12,31 +14,12 @@ input {
 
     follow_mouse   = 1 
     natural_scroll = 1
-
-	# [ -1.0 - 1.0 ]
-    sensitivity = -0.4 
+    sensitivity    = -0.4  # <-1.0, 1.0>
 
     touchpad {
     	natural_scroll = 1
     	scroll_factor  = 0.6
     }
-}
-
-# device:[touchpad name] {
-#     sensitivity = 0.1
-# }
-
-# Personal laptop
-# device:msft0001:01-04f3:3138-touchpad {
-# 	sensitivity = 0.1
-#    	disable_while_typing = 0
-# }
-
-
-# Disables play/pause characters as keyboard inputs
-# (the sequence '428u' would be a bit unfortunate in vim xd)
-device:momentum-4-(avrcp) {
-    enabled = 0    
 }
 
 gestures {
@@ -65,13 +48,13 @@ general {
 decoration {
     rounding = 7
      
-    blur = 1
+    blur        = 1
     blur_size   = 6  # minimum 1
     blur_passes = 1  # minimum 1
-    blurls=waybar
+    blurls      = waybar
         
-    drop_shadow  = 1
-    shadow_range = 15
+    drop_shadow         = 1
+    shadow_range        = 15
     shadow_render_power = 3
     
     col.shadow = 0xff000000
@@ -125,5 +108,6 @@ windowrule = float, ^(ratulator)$
 
 # windowrulev2 = opacity 0.8 0.8, class:^(Dunst)$
 
-# Local settings not tracked by git
+
+# == Local settings not tracked by git ==
 source = ~/.config/hypr/local.conf
