waybar: replaced broken hyprland/language by custom/language and added OSK capability
OSK - on screen keyboard

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -15,7 +15,7 @@
     "modules-center" : ["custom/sepLeft", "wlr/workspaces", "custom/sepRight"],
 
 	// Desktop
-    "modules-right"    : ["custom/sepLeft", "pulseaudio", "pulseaudio#mic", "memory", "cpu", "hyprland/language", "custom/notifications", "clock", "tray"],
+    "modules-right"    : ["custom/sepLeft", "pulseaudio", "pulseaudio#mic", "memory", "cpu", "custom/language", "custom/notifications", "clock", "tray"],
 
 	// Laptop 
 	// Edit battery in battery and baterry#power modules (ls /sys/class/power_supply)
@@ -184,11 +184,13 @@
         "separate-outputs" : true
     },
 
-    "hyprland/language": 
+    "custom/language": 
     {
-    	"format"    : "{}",
-    	"format-en" : "US",		
-    	"format-cs" : "CZ"
+    	"format"   : "{}",
+        "interval" : "once",
+        "exec-on-event" : true,
+        "exec"     : "sleep 0.1; hyprctl devices | awk '/main: yes/ {print a}{a=$3}' | tail -n 1",
+        "on-click" : "killall wvkbd-mobintl || wvkbd-mobintl -L 350 --landscape-layers landscape,special,emoji"
     },
 
     "memory": 
