hypr: added env variables

--- a/config/hypr/variables.conf
+++ b/config/hypr/variables.conf
@@ -6,3 +6,8 @@ $filemanager = thunar
 $terminal    = kitty -1
 $chat        = webcord --enable-features=UseOzonePlatform --ozone-platform=wayland
 $emojipicker = smile
+
+# -- ENV --
+env = GTK_THEME,oomox-gray31
+env = DESKTOP_SESSION,hyprland
+env = QT_QPA_PLATFORM,wayland,x11
