--- a/config/wireplumber/main.lua.d/.gitignore
+++ b/config/wireplumber/main.lua.d/.gitignore
@@ -7,4 +7,4 @@
 # 1. !folder-name/    <-- includes the directory and top level files
 # 2. !folder-name/**  <-- includes the directory and sub level files recursively, except for the "Ignore some other system generated files" rules below
 ###############################
-!main.lua.d/42-alsa-rename.lua.template
+!42-alsa-rename.lua.template
